tests/whiley/valid/test_969.wyal
define seqSum_loopinvariant_8(int i) is:
    i >= 0


assert "index out of bounds (not less than length)":
    forall(int r, int i, int i$1, int[] items):
        if:
            r == 0
            i == 0
            seqSum_loopinvariant_8(i$1)
            i$1 < |items|
        then:
            i$1 < |items|


