tests/whiley/invalid/test_193.wyal
assert "index out of bounds (not less than length)":
    forall(int[] r$1, int[] ls, int[] r, int i$1, int i):
        if:
            i == 0
            r == [0;|ls|]
            i$1 < |ls|
        then:
            i$1 < |r$1|


